--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 h1 {
   text-align: center;
   font-family: sans-serif;
-}
-h2 {
-  text-align: right;
   color: coral;
-  margin-right: 15%;
 }
-.links {
-  text-decoration-line: underline;
+p {
+  margin-top: 35%;
+  margin-left: 20px;
+}
+.content {
+  display: flex;
+}
+.page {
+  padding: 5%;
 }
