--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,3 +16,14 @@ p {
 h4 {
   text-align: center;
 }
+table {
+	border: 1px solid black;
+}
+
+th {
+	border: 1px solid black;
+}
+td {
+	border: 1px solid black;
+
+}
