--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,10 +19,7 @@ h4 {
 table {
 	border: 1px solid black;
 }
-
-th {
-	border: 1px solid black;
-}
-td {
-	border: 1px solid black;
+th,td {
+	width: 200px;
+	border-collapse: collapse;
 }
